# steam-recommender-system

./: .gitignore  pyproject.toml  requirements.txt
src/: config.py
src/etl/: extractor.py
src/models/: data_utils.py  item_based.py  user_based.py
